Remove injected head scripts

--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "source-map-support": "^0.5.16",
     "strip-bom": "^2.0.0",
     "testcafe-browser-tools": "2.0.15",
-    "testcafe-hammerhead": "24.2.0",
+    "testcafe-hammerhead": "https://github.com/DevExpress/testcafe-hammerhead/files/6374754/testcafe-hammerhead-24.1.1.zip",
     "testcafe-legacy-api": "5.0.0",
     "testcafe-reporter-json": "^2.1.0",
     "testcafe-reporter-list": "^2.1.0",
